--- a/eQuery/readme.html
+++ b/eQuery/readme.html
@@ -2,7 +2,7 @@ Enhanced Query Widget
 
 By: Kevin MacLeod - Savannah - Chatham Area GIS 
 
-Version: Alpha 1 development build  9/29/15
+Version: Alpha 2 development build  10/8/15
 
 
 Setup: 
@@ -21,7 +21,7 @@ To Do:
 
 2. add option to restrict results by geometry. By map extent for version 1.0 and in future versions, potentially by user-drawn geometry i.e. circle, square, lasso.
 
-3. Better error handling and dealing with no results. Still incomplete.
+3. Better error handling and dealing with no results.
 
 4. Refine UI. Better html, text boxes, buttons, dialogues, etc. 
 Add progress bar while it searches for results. 
