--- a/eQuery/readme.html
+++ b/eQuery/readme.html
@@ -2,7 +2,7 @@ Enhanced Query Widget
 
 By: Kevin MacLeod - Savannah - Chatham Area GIS 
 
-Version: Beta 1 development build  10/14/15
+Version: Alpha 3 development build  10/14/15
 
 
 Setup: 
